# GEMM_Vulkan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: autotune_plan.md  cutlass_mapping.md  optimization_log.md  profiling_notes.md  roadmap.md
include/gemm/: config.hpp  result.hpp  runner.hpp  types.hpp  verifier.hpp
results/benchmark/: autotune_best.json  autotune_raw.json  smoke.csv  stats_smoke.csv  stats_smoke_v2.csv
shaders/common/: bounds.glsl  common.glsl  loads.glsl
shaders/sgemm/: 00_naive.comp  01_coalesced.comp  02_shared_tiling.comp  03_thread_tiling_1d.comp  03_thread_tiling_1d_shared_vec.comp  04_thread_tiling_2d.comp  05_vectorized.comp  06_bank_conflict_avoid.comp  07_bank_conflict_padding.comp  08_subgroup_tiling.comp  08_subgroup_tiling_compiler_friendly.comp  09_double_buffering.comp  10_tile_swizzle.comp  11_autotuned.comp  12_split_k_partial.comp  12_split_k_reduce.comp  13_persistent_scheduler.comp  14_stream_k_partial.comp
src/app/: main.cpp
src/gemm/: benchmark.cpp  internal.hpp  reference_cpu.cpp  runner.cpp  verifier.cpp
src/gemm/configs/: autotune_space.cpp  default_configs.cpp  default_configs.hpp
src/gemm/kernels/: launch_config.cpp  launch_config.hpp  registry.cpp  registry.hpp
src/runtime/: buffer.cpp  command.cpp  descriptor.cpp  device.cpp  instance.cpp  pipeline.cpp  runtime.hpp  timestamp.cpp
tools/: autotune.py  autotune_double_buffering.json  benchmark.py  plot.py  summarize.py
